--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
       <div class="logo text-center">
         <a href="index.jsp">HOLA LAND</a>
       </div>
-      <p class="notification"> ${message}&nbsp; </p>
+      <p class="notification"></p>
       <form name='f' th:action="@{/j_spring_security_check}" method='POST'>
         <div class="form-group">
           <label>
