--- a/src/main/resources/templates/work/modal/modal-show-detail-find-job.html
+++ b/src/main/resources/templates/work/modal/modal-show-detail-find-job.html
@@ -20,7 +20,7 @@
               <div class="panel request-title">
                 <div class="row">
                   <div class="col-md-12 col-lg-12 col-xl-12">
-                    <h3 th:text="${workFindJob.workRequestFindJobTitle}"></h3>
+                    <h3 class="m-0" th:text="${workFindJob.workRequestFindJobTitle}"></h3>
                   </div>
                 </div>
               </div>
