--- a/src/main/resources/templates/work/modal/modal-show-detail-recruitment.html
+++ b/src/main/resources/templates/work/modal/modal-show-detail-recruitment.html
@@ -80,7 +80,7 @@
                   <pre class="pre" th:text="${workRecruitment.workRequestRecruitmentRequirement}"></pre>
               </div>
               <h2 class="sub-title">Quyền lợi được hưởng</h2>
-              <div class="panel-text">
+              <div class="panel-text m-0">
                   <pre class="pre" th:text="${workRecruitment.workRequestRecruitmentBenefit}"></pre>
               </div>
             </div>
