--- a/src/main/resources/static/css/hola-land/common.css
+++ b/src/main/resources/static/css/hola-land/common.css
@@ -13,6 +13,11 @@ body {
   background-color: #f0f3f6;
 }
 
+pre,
+.pre {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+
 #wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -428,7 +433,7 @@ body.fixed-nav.sidebar-toggled #content-wrapper {
 
 .panel {
   border-radius: 12px;
-  border: 1px solid;
+  border: 1px solid #ccc;
   position: relative;
   transition: 0.4s;
   padding: 18px 20px;
@@ -437,7 +442,7 @@ body.fixed-nav.sidebar-toggled #content-wrapper {
 
 .panel-text {
   border-radius: 12px;
-  border: 1px solid;
+  border: 1px solid #ccc;
   padding: 14px 20px;
   margin-bottom: 16px;
 }
