--- a/src/main/resources/static/css/hola-land/fptu.css
+++ b/src/main/resources/static/css/hola-land/fptu.css
@@ -22,10 +22,9 @@
 .club-info .modal-content .modal-body .description p,
 .club-info .modal-content .modal-body .description .pre,
 .club-info .modal-content .modal-body .description .contact {
-  border: 1px solid;
+  border: 1px solid #ccc;
   padding: 14px 20px;
   border-radius: 12px;
-  margin-bottom: 16px;
 }
 
 .club-info .modal-content .modal-body .description .row-info {
