--- a/src/main/resources/templates/dashboard/dashboard.html
+++ b/src/main/resources/templates/dashboard/dashboard.html
@@ -30,7 +30,7 @@
           </div>
           <div class="col-9 text-right">
             <div class="huge"><span th:text="${count.countStudentAcc}"></span></div>
-            <div class="sub-text">Học sinh</div>
+            <div class="sub-text">Số Học sinh</div>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
           </div>
           <div class="col-9 text-right">
             <div class="huge"><span th:text="${count.countRecruitmentAcc}"></span></div>
-            <div class="sub-text">Người tuyển dụng</div>
+            <div class="sub-text">Số Người tuyển dụng</div>
           </div>
         </div>
       </div>
@@ -56,7 +56,7 @@
           </div>
           <div class="col-9 text-right">
             <div class="huge"><span th:text="${count.countSellerAcc}"></span></div>
-            <div class="sub-text">Người bán hàng</div>
+            <div class="sub-text">Số Người bán hàng</div>
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
           </div>
           <div class="col-9 text-right">
             <div class="huge"><span th:text="${count.countOrder}"></span></div>
-            <div class="sub-text">Số đơn hàng order hoàn thành</div>
+            <div class="sub-text">Số đơn hàng hoàn thành</div>
           </div>
         </div>
       </div>
