--- a/src/main/resources/templates/fptu/club.html
+++ b/src/main/resources/templates/fptu/club.html
@@ -18,7 +18,7 @@
           <th>Người liên hệ<i class="fas fa-sort fa-size"></i></th>
           <th>Email liên hệ<i class="fas fa-sort fa-size"></i></th>
           <th>Số điện thoại<i class="fas fa-sort fa-size"></i></th>
-          <th>Thêm<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-right">Thêm</th>
         </tr>
         </thead>
         <tbody>
