--- a/src/main/resources/templates/traffic/modal/modal-update-motorbike-taxi-drivers.html
+++ b/src/main/resources/templates/traffic/modal/modal-update-motorbike-taxi-drivers.html
@@ -67,7 +67,7 @@
       <div class="modal-footer">
         <a href="javascript:void(0)" class="btn btn-sm btn-secondary"
            onclick="document.getElementById('updateDriver').submit();">
-          <i class="fas fa-check text-success"></i>Xác nhận
+          <i class="fas fa-check text-success mr-2"></i>Xác nhận
         </a>
         <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Đóng</button>
       </div>
