--- a/src/main/resources/templates/work/find-job.html
+++ b/src/main/resources/templates/work/find-job.html
@@ -19,7 +19,7 @@
           <th>Ngày tạo<i class="fas fa-sort fa-size"></i></th>
           <th>Ngày hết hạn<i class="fas fa-sort fa-size"></i></th>
           <th>Trạng thái<i class="fas fa-sort fa-size"></i></th>
-          <th class="text-right">Thêm<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-right">Thêm</th>
         </tr>
         </thead>
         <tbody>
