--- a/src/main/resources/templates/traffic/modal/modal-update-motorbike-taxi-drivers.html
+++ b/src/main/resources/templates/traffic/modal/modal-update-motorbike-taxi-drivers.html
@@ -16,7 +16,7 @@
             </fieldset>
           </div>
           <div class="form-row">
-            <div class="form-row col-md-2">
+            <div class="form-group col-md-2">
               <fieldset>
                 <label>Thời gian chạy</label>
                 <input type="text" class="form-control" id="startTime" th:field="${currentDriver.tfMotorbikeTaxiDriversStartTime}">
