--- a/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
+++ b/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
@@ -8,6 +8,15 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-12 mb-3">
+      <a href="javascript:void(0)" class="btn btn-primary" data-toggle="modal"
+         data-target="#addNewDriverModal">
+        <i class="fas fa-plus text-success mr-2"></i>Thêm xe ôm
+      </a>
+    </div>
+  </div>
+
   <div class="row datatable mt-3">
     <div class="col-lg-12">
       <table id="motorbike-table" class="table" cellspacing="0" width="100%">
