--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -21,8 +21,8 @@
       <a class="dropdown-item" th:href="@{/user/all(status=0)}" th:classappend="${status == 0 ? 'active' : ''}">
         <i class="fas fa-user-friends fa-fw mr-2"></i>Tất cả
       </a>
-      <a class="dropdown-item" th:href="@{/user/all(status=1)}" th:classappend="${status == 1 ? 'active' : ''}">
-        <i class="fas fa-user-friends fa-fw mr-2"></i>Người dùng
+      <a class="dropdown-item" th:href="@{/user/all(status=4)}" th:classappend="${status == 4 ? 'active' : ''}">
+        <i class="fas fa-user-friends fa-fw mr-2"></i>Sinh viên
       </a>
       <a class="dropdown-item" th:href="@{/user/all(status=2)}" th:classappend="${status == 2 ? 'active' : ''}">
         <i class="fas fa-user-friends fa-fw mr-2"></i>Người tuyển dụng
