--- a/src/main/resources/templates/dashboard/dashboard.html
+++ b/src/main/resources/templates/dashboard/dashboard.html
@@ -16,7 +16,7 @@
             <i class="fas fa-users fa-3x"></i>
           </div>
           <div class="col-9 text-right">
-            <div class="huge"><span th:text="${count.countUserAcc}"></span></div>
+            <div class="huge"><span th:text="${count.countStudentAcc + count.countRecruitmentAcc + count.countSellerAcc}"></span></div>
             <div class="sub-text">Số lượng tài khoản</div>
           </div>
         </div>
