--- a/src/main/resources/templates/work/find-job.html
+++ b/src/main/resources/templates/work/find-job.html
@@ -55,6 +55,9 @@
                   <span class="d-none" th:text="*{worker.workRequestFindJobId}"></span>
                 </i>
               </a>
+              <a th:href="@{/work/find-job/cancel(findJobId=*{worker.workRequestFindJobId})}" class="color-danger mr-2">
+                <i class="fas fa-times"></i>
+              </a>
             </th:block>
             <a href="javascript:void(0)" class="color-danger">
               <i class="far fa-trash-alt" onclick="confirmDeleteFindJob(event)">
