--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -6,8 +6,8 @@
         <i class="fas fa-user-circle fa-fw mr-1 fa-lg"></i>Admin
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-        <a class="dropdown-item" href="javascript:void(0)" data-toggle="modal" data-target="#logoutModal"><i class="fas fa-key fa-fw mr-2"></i>Đổi mật khẩu</a>
-        <div class="dropdown-divider"></div>
+<!--        <a class="dropdown-item" href="javascript:void(0)" data-toggle="modal" data-target="#logoutModal"><i class="fas fa-key fa-fw mr-2"></i>Đổi mật khẩu</a>-->
+<!--        <div class="dropdown-divider"></div>-->
         <a class="dropdown-item" th:href="@{/logout}"><i class="fas fa-sign-out-alt fa-fw mr-2"></i>Đăng xuất</a>
       </div>
     </li>
