--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -53,7 +53,7 @@
       <a class="dropdown-item" th:href="@{/work/recruitment}"><i class="fas fa-search fa-fw mr-2"></i>Tuyển người làm</a>
     </div>
   </li>
-  <li class="nav-item dropdown">
+  <li class="nav-item dropdown" th:classappend="${page == 6 ? 'active' : ''}">
     <a class="nav-link dropdown-toggle" href="#" id="foodDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fas fa-pizza-slice fa-fw"></i>
       <span>Dịch vụ ăn - uống</span>
@@ -76,28 +76,28 @@
       <a class="dropdown-item" th:href="@{/motorbike-taxi-drivers}"><i class="fas fas fa-motorcycle fa-fw mr-2"></i>Xe ôm</a>
     </div>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="javascript:void(0)" id="myToast">
-      <i class="fas fa-angle-double-right fa-fw"></i>
-      <span>Test Toasts</span>
-    </a>
-  </li>
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="settingDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <i class="fas fa-cog fa-fw"></i>
-      <span>Setting</span>
-      <i class="fas fa-angle-right float-right mt-1 font-arrow toggle-hide"></i>
-    </a>
-    <div class="dropdown-menu" aria-labelledby="settingDropdown">
-      <h6 class="dropdown-header">Email:</h6>
-      <a class="dropdown-item" href=""><i class="fas fa-wrench fa-fw mr-2"></i>Config</a>
-      <a class="dropdown-item" href=""><i class="far fa-envelope fa-fw mr-2"></i>Content</a>
-      <div class="dropdown-divider"></div>
-      <h6 class="dropdown-header">Other:</h6>
-      <a class="dropdown-item" href="">404 Page</a>
-      <a class="dropdown-item" href="">Blank Page</a>
-    </div>
-  </li>
+<!--  <li class="nav-item">-->
+<!--    <a class="nav-link" href="javascript:void(0)" id="myToast">-->
+<!--      <i class="fas fa-angle-double-right fa-fw"></i>-->
+<!--      <span>Test Toasts</span>-->
+<!--    </a>-->
+<!--  </li>-->
+<!--  <li class="nav-item dropdown">-->
+<!--    <a class="nav-link dropdown-toggle" href="#" id="settingDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--      <i class="fas fa-cog fa-fw"></i>-->
+<!--      <span>Setting</span>-->
+<!--      <i class="fas fa-angle-right float-right mt-1 font-arrow toggle-hide"></i>-->
+<!--    </a>-->
+<!--    <div class="dropdown-menu" aria-labelledby="settingDropdown">-->
+<!--      <h6 class="dropdown-header">Email:</h6>-->
+<!--      <a class="dropdown-item" href=""><i class="fas fa-wrench fa-fw mr-2"></i>Config</a>-->
+<!--      <a class="dropdown-item" href=""><i class="far fa-envelope fa-fw mr-2"></i>Content</a>-->
+<!--      <div class="dropdown-divider"></div>-->
+<!--      <h6 class="dropdown-header">Other:</h6>-->
+<!--      <a class="dropdown-item" href="">404 Page</a>-->
+<!--      <a class="dropdown-item" href="">Blank Page</a>-->
+<!--    </div>-->
+<!--  </li>-->
   <li class="nav-item btn-toggle">
     <a class="nav-link" href="javascript:void(0)" id="btn-sidebar-toggle">
       <i class="fas fa-angle-left fa-fw"></i>
